--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,21 +33,24 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:mem:play"
-db.default.user=sa
-db.default.password=""
-ebean.default="models.*"
+#db.default.driver=org.h2.Driver
+#db.default.url="jdbc:h2:mem:play"
+#db.default.user=sa
+#db.default.password="postgres"
+db.default.driver=org.postgresql.Driver
+db.default.url="postgres://postgres:postgres@localhost/filmes"
+
 
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+evolutionplugin=disabled
 
 # Logger
 # ~~~~~
 # You can also configure logback (http://logback.qos.ch/),
 # by providing an application-logger.xml file in the conf directory.
+ebean.default="models.*"
 
 # Root logger:
 logger.root=ERROR
@@ -57,4 +60,7 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
+
+play.db.pool=bonecp
+play.db.prototype.bonecp.maxConnectionsPerPartition = 50
 
