Incluir comentários do Facebook e intergrar login do mesmo utilizanda o Secure Social.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -64,3 +64,5 @@ logger.application=DEBUG
 play.db.pool=bonecp
 play.db.prototype.bonecp.maxConnectionsPerPartition = 50
 
+include "securesocial.conf"
+
